Correcciones y nuevas implementaciones en seccion de documentos

--- a/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
+++ b/frontend/Proyecto/src/app/componentes/cliente/change-password/change-password.component.html
@@ -4,7 +4,7 @@
         <div>
             <h1  id="title" class="text-center mt-5 mb-4" >Cambiar Contraseña</h1>
         </div>
-        <form #form autocomplete="off" novalidate #formRef="ngForm" [formGroup]="changePassword"(ngSubmit)="actualizar(changePassword.value)">
+        <form #form id="miform" autocomplete="off" novalidate #formRef="ngForm" [formGroup]="changePassword"(ngSubmit)="actualizar(changePassword.value)">
             <div class="row mb-3" id="formulario">
                 <div id="campos">
                     <div class="col-md-5 mt-4 mb-4 w-50">
