--- a/frontend/Proyecto/src/app/componentes/empresa/list-grupos/list-grupos.component.css
+++ b/frontend/Proyecto/src/app/componentes/empresa/list-grupos/list-grupos.component.css
@@ -18,4 +18,12 @@
 th,td{
     text-align: center;
 }
+button{
+    margin: 0 2% 0 0;
+}
+
+button.delete{
+    background-color: rgb(232, 78, 78);
+}
+
 
