--- a/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.html
@@ -26,13 +26,13 @@
                 <li class="nav-item" *ngIf="permissions.view_user || permissions.add_user">
                     <a class="nav-link active" aria-current="page" routerLink="grupos-permisos">
                         <span data-feather="grupos-permisos"></span>
-                        Usuarios/roles
+                        Usuarios
                     </a>
                 </li>
                 <li class="nav-item" *ngIf="permissions.view_group || permissions.add_group">
                     <a class="nav-link active" aria-current="page" routerLink="grupos">
                         <span data-feather="grupos"></span>
-                        Grupos
+                        Roles
                     </a>
                 </li>
 
