--- a/frontend/Proyecto/src/app/componentes/empresa/list-users/list-users.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/list-users/list-users.component.html
@@ -32,7 +32,7 @@
 
                 </tbody>
             </table>
-            <!-- <div id="indices">
+            <div id="indices">
                 <div id="cantidad" class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
                 <ul id="paginacion" class="pagination">
                     <li class="page-item disabled"><a href="#" class="page-link">Previous</a></li>
@@ -43,7 +43,7 @@
                     <li class="page-item"><a href="#" class="page-link">5</a></li>
                     <li class="page-item"><a href="#" class="page-link">Next</a></li>
                 </ul>
-            </div> -->
+            </div>
         </div>
     </div>
 </div>
