--- a/frontend/Proyecto/src/app/componentes/empresa/list-grupos/list-grupos.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/list-grupos/list-grupos.component.html
@@ -22,13 +22,13 @@
                         <td>{{grupo.name}}</td>
                         <td> 
                             <button (click)="envioId(id)" class=" {{editarGrupo}} btn btn-primary btn-block">Editar</button>
-                            <button class="delete {{eliminarGrupo}} btn btn-block"> Borrar </button>
+                            <button id={{grupo.id}} (click)="borrarGrupo(id)" class="delete {{eliminarGrupo}} btn btn-block"> Borrar </button>
                         </td>
                     </tr>
 
                 </tbody>
             </table>
-            <!-- <div id="indices">
+            <div id="indices">
                 <div id="cantidad" class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
                 <ul id="paginacion" class="pagination">
                     <li class="page-item disabled"><a href="#" class="page-link">Previous</a></li>
@@ -39,7 +39,7 @@
                     <li class="page-item"><a href="#" class="page-link">5</a></li>
                     <li class="page-item"><a href="#" class="page-link">Next</a></li>
                 </ul>
-            </div> -->
+            </div>
         </div>
     </div>
 </div>
