--- a/frontend/Proyecto/src/app/componentes/empresa/list-grupos/list-grupos.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/list-grupos/list-grupos.component.html
@@ -28,18 +28,7 @@
 
                 </tbody>
             </table>
-            <div id="indices">
-                <div id="cantidad" class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
-                <ul id="paginacion" class="pagination">
-                    <li class="page-item disabled"><a href="#" class="page-link">Previous</a></li>
-                    <li class="page-item active"><a href="#" class="page-link">1</a></li>
-                    <li class="page-item"><a href="#" class="page-link">2</a></li>
-                    <li class="page-item"><a href="#" class="page-link">3</a></li>
-                    <li class="page-item"><a href="#" class="page-link">4</a></li>
-                    <li class="page-item"><a href="#" class="page-link">5</a></li>
-                    <li class="page-item"><a href="#" class="page-link">Next</a></li>
-                </ul>
-            </div>
+            <list-pagination urlRequest="/api/user/grupos/" (listObjects)='obtenerObjetos($event)' ></list-pagination>
         </div>
     </div>
 </div>
