--- a/frontend/Proyecto/src/app/componentes/empresa/list-users/list-users.component.css
+++ b/frontend/Proyecto/src/app/componentes/empresa/list-users/list-users.component.css
@@ -15,6 +15,16 @@
     width: 100%;
 }
 
+#buscador{
+    height: 50px;
+    width: 55px;
+  }
+  
+  #inputbuscador{
+    height: 50px;
+    width: 250px;
+  }
+
 th,td{
     text-align: center;
 }
