--- a/frontend/Proyecto/src/app/componentes/empresa/list-users/list-users.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/list-users/list-users.component.html
@@ -3,10 +3,10 @@
         <div id="caja"></div>
         <h1 id="title" class="text-center font-weight-bold mt-5">Usuarios</h1>
         <div class="mt-2 mb-4 d-flex flex-row justify-content-around">
-            <div class="d-flex align-items-center">
+            <!--<div class="d-flex align-items-center">
                 <input #valor (change)=buscador(valor) id="inputbuscador" type="text">
                 <button id="buscador" (click)=buscador(valor) class="btn btn-outline-secondary"><img alt="buscador" src="assets/lupa.png" width="25px"></button>
-            </div>
+            </div>-->
             <div>
                 <button (click)="crearUser()" class=" {{agregarUsuario}} btn btn-primary btn-block">Agregar nuevo usuario</button>
             </div>
