--- a/frontend/Proyecto/src/app/componentes/empresa/partials/header-empresa/header-empresa.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/partials/header-empresa/header-empresa.component.html
@@ -1,14 +1,14 @@
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">Facturacion</a>
-    <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
-        data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
-    <div class="navbar-nav">
-        <div class="nav-item text-nowrap">
-            <a class="nav-link px-3" (click)="logout()">Sign out</a>
+    <div id="nav-container" class="row w-100">
+        <div class='navbar-brand col-2 align-items-center' >
+            <div class="h-100 row align-content-center">
+                <a class="col-6 offset-6 nav-link navbar-brand" [routerLink]= "['/portal']" >Facturación</a>
+            </div>
+        </div>
+        <div class="navbar-nav col-1 offset-9">
+            <div class="nav-item text-nowrap">
+                <a class="nav-link px-3" (click)="logout()">Sign out</a>
+            </div>
         </div>
     </div>
 </header>
