--- a/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.html
+++ b/frontend/Proyecto/src/app/componentes/empresa/partials/nav-empresa/nav-empresa.component.html
@@ -1,57 +1,72 @@
 <div id="container-body">
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-        <div class="position-sticky">
+    <nav id="sidebarMenu" class="col-md-3 col-lg-2">
+        <div class="position-sticky w-100">
 
             <ul id="ul-nav-container" class="nav flex-column" >
                 
-                <li class="nav-item" *ngIf="permissions.view_profile && !permissions.view_empresatemp">
-                    <a class="nav-link active" aria-current="page" routerLink="perfil">
+                <li class="nav-item" routerLink="perfil" *ngIf="permissions.view_profile && !permissions.view_empresatemp">
+                    <mat-icon >person</mat-icon>
+                    <a class="nav-link active" aria-current="page" >
                         <span data-feather="profile-user"></span>
                         Perfil
                     </a>
+                    <mat-icon >arrow_forward_ios</mat-icon>
                 </li>
-                <li class="nav-item" *ngIf="permissions.change_profile">
+                <li class="nav-item" routerLink="cambiar-contrasenia" *ngIf="permissions.change_profile">
+                    <mat-icon> vpn_key</mat-icon>
                     <a class="nav-link active" aria-current="page" routerLink="cambiar-contrasenia">
                         <span data-feather="cambiar_contraseña"></span>
                         Cambiar Contraseña
                     </a>
+                    <mat-icon>arrow_forward_ios</mat-icon>
                 </li>
-                <li class="nav-item"*ngIf="permissions.view_empresa">
+                <li class="nav-item" routerLink="vista-empresa" *ngIf="permissions.view_empresa">
+                    <mat-icon> business</mat-icon>
                     <a class="nav-link active" aria-current="page" routerLink="vista-empresa">
                         <span data-feather="view-company"></span>
                         Empresa
                     </a>
+                    <mat-icon>arrow_forward_ios</mat-icon>
                 </li>
 
-                <li class="nav-item" *ngIf="permissions.view_user || permissions.add_user">
+                <li class="nav-item" routerLink="grupos-permisos" *ngIf="permissions.view_user || permissions.add_user">
+                    <mat-icon>group</mat-icon>
                     <a class="nav-link active" aria-current="page" routerLink="grupos-permisos">
                         <span data-feather="grupos-permisos"></span>
                         Usuarios
                     </a>
+                    <mat-icon>arrow_forward_ios</mat-icon>
                 </li>
-                <li class="nav-item" *ngIf="permissions.view_group || permissions.add_group">
+                <li class="nav-item" routerLink="grupos" *ngIf="permissions.view_group || permissions.add_group">
+                    <!-- <mat-icon>how_to_reg</mat-icon> -->
+                    <mat-icon>assignment_ind</mat-icon>
                     <a class="nav-link active" aria-current="page" routerLink="grupos">
                         <span data-feather="grupos"></span>
                         Roles
                     </a>
+                    <mat-icon>arrow_forward_ios</mat-icon>
                 </li>
 
-                <li class="nav-item" *ngIf="permissions.view_empresatemp">
+                <li class="nav-item" routerLink="empresasTemp" *ngIf="permissions.view_empresatemp">
+                    <mat-icon> business</mat-icon>
                     <a class="nav-link" routerLink="empresasTemp">
                         <span data-feather="empresasTemporales"></span>
                         Consultas Empresas
                     </a>
+                    <mat-icon>arrow_forward_ios</mat-icon>
                 </li>
-                <li class="nav-item" *ngIf="permissions.view_documentos">
+                <li class="nav-item" routerLink="documentos-company" *ngIf="permissions.view_documentos">
+                    <mat-icon>file_copy</mat-icon>
                     <a class="nav-link active" aria-current="page" routerLink="documentos-company">
                         <span data-feather="documentos-company"></span>
                         Documentos
                     </a>
+                    <mat-icon>arrow_forward_ios</mat-icon>
                 </li>
             </ul>
         </div>
     </nav>
-    <section id="dashboard-content" class="col">
+    <section id="dashboard-content" class="col-md-9 col-lg-10 offset-md-3 offset-lg-2">
         <router-outlet></router-outlet>
     </section>
 </div>
