--- a/frontend/Proyecto/src/app/componentes/pagina_comercial/partials/nav/nav.component.css
+++ b/frontend/Proyecto/src/app/componentes/pagina_comercial/partials/nav/nav.component.css
@@ -1,3 +1,79 @@
+nav{
+    background-color: #DBDBDB!important;
+    padding: 0;
+    height: 50px;
+}
+
+/* Nombre y logo de la empresa */
+
+.navbar-brand{
+    background-color: #00B4C0;
+    color: white;
+    margin: 0;
+    border-radius: 0 50px 50px 0;
+}
+
+.navbar-brand a{
+
+}
+
+/* Menu de navegacion */
+.navbar-nav{
+    height: 100%;
+    background-color: #EEEEEE;
+    align-content: center;
+    border-radius: 50px 0 0 50px;
+}
+
+.navbar-nav ul{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    align-items: center;
+    width: 100%;
+    justify-content: flex-end;
+}
+
+.navbar-nav ul li{
+    border-radius: 50px 50px 50px 50px;
+    border-color: #929292 ;
+    border-width: 1px;
+    border-style: solid;
+    margin: 0 2% 0 2%;
+}
+
+.navbar-nav ul li a{
+    color: #ED8336;
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
+    margin: 0 5px 0 5px;
+}
+
+.navbar-nav ul li:last-child{
+    background-color: #22bbc5 ;
+    border-style: none;
+    margin-left: 50px;
+}
+
+.navbar-nav ul li:last-child a{
+    color: white;
+}
+
+
+#nav-container{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.container-fluid{
+    padding-left: 0;
+    padding-right: 0;
+    justify-content: normal;
+}
+
 .nb_element{
     padding-top: .3125rem;
     padding-bottom: .3125rem;
@@ -9,16 +85,21 @@
     white-space: nowrap;
     
 }
-.nb_element:hover{
-    background-color: lightslategray;
-    color: black;
+.nav-item:hover{
+    background-color: #ED8336;
     cursor: pointer;
 }
-.active2{
-    background-color: lightslategray;
+
+.nav-item:hover a{
+    color: black !important;
 }
 
-ul{
-    display: flex;
-    flex-direction: row;
+.active2{
+    background-color: rgb(235, 153, 1);
 }
+
+.active2 a{
+    color: black !important;
+}
+
+
